# zpython

./: LICENSE  README.md  setup.cfg  setup.py
src/zpython/: arrays.py
