[metadata]
name = zpython
version = 0.0.1
author = Max Marshall
author_email = m@zmarshall.nl
description = My collection of python utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/everydayanchovies/zpython
project_urls =
    Bug Tracker = https://github.com/everydayanchovies/zpython/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
